--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sklipper-software-website",
-  "version": "0.1.3",
-  "author": "Morteza Mirbostani",
+  "version": "0.1.4",
+  "author": "Seyed Morteza Mirbostani",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
